k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: employee-system
  labels:
    name: employee-system
